--- a/1.html
+++ b/1.html
@@ -1,11 +1,11 @@
 <!doctype html>
 <html>
 <head>
-  <title>beerntv</title>
+  <title>web1 - html</title>
   <meta charset="utf-8">
 </head>
 <body>
-  <h1><a href="index.html">beerntv's page</a></h1>
+  <h1><a href="index.html">WEB</a></h1>
   <ol>
     <li><a href="1.html">HTML</a></li>
     <li><a href="2.html">CSS</a></li>
