--- a/index.html
+++ b/index.html
@@ -1,18 +1,137 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
+
 <head>
-  <title>beerntv - Welcome</title>
   <meta charset="utf-8">
+  <style>
+    .dropbtn {
+      background-color: #4CAF50;
+      color: white;
+      padding: 16px;
+      font-size: 16px;
+      border: none;
+      cursor: pointer;
+    }
+
+    .helloBtn {
+      background-color: #443e41;
+      color: red;
+      padding: 16px;
+      font-size: 16px;
+      border: none;
+      cursor: pointer;
+    }
+
+    .glad {
+      position: relative;
+    }
+
+    .dropbtn :hover {
+      background-color: #3e8e41;
+    }
+    /*
+    .dropdown {
+    position:            relative;
+    display:             inline-block;
+    background-color: red;
+    }
+
+    .dropdown:               hover {
+    background-color:      red;
+    }
+*/
+
+    .dropdown-content {
+      display: none;
+      position: absolute;
+      background-color: #deecbb;
+      float: right;
+      min-width: 160px;
+      overflow: auto;
+      box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+      z-index: 1;
+    }
+
+    .dropdown-content a {
+      color: black;
+      padding: 12px 16px;
+      text-decoration: none;
+      display: block;
+    }
+
+    .dropdown a:hover {
+      background-color: #f18080
+    }
+
+    .show {
+      display: block;
+      background-color: red;
+    }
+    /*
+    .dropbtn {
+    margin-left:100px;
+    }
+*/
+  </style>
 </head>
+
 <body>
-  <h1><a href="index.html">WEB</a></h1>
+
+  <h2>Clickable Dropdown</h2>
+  <p>Click on the button to open the dropdown menu.</p>
+
+  <div class="dropdown">
+    <button onclick="myFunction()" class="dropbtn">Dropdown</button>
+    <div id="myDropdown" class="dropdown-content">
+      <a href="#home">Home</a>
+      <a href="#about">About</a>
+      <a href="#contact">Contact</a>
+      <a href="#Join us">Join us</a>
+    </div>
+
+  </div>
+
+  <div class="hello">
+    <button class="helloBtn">안녕하세요</button>
+
+  </div>
+
+  <span class="glad">반갑습니다.</span>
   <ol>
     <li><a href="1.html">HTML</a></li>
     <li><a href="2.html">CSS</a></li>
     <li><a href="3.html">JavaScript</a></li>
   </ol>
-  <h2>WEB</h2>
-  <p>The World Wide Web (abbreviated WWW or the Web) is an information space where documents and other web resources are identified by Uniform Resource Locators (URLs), interlinked by hypertext links, and can be accessed via the Internet.[1] English scientist Tim Berners-Lee invented the World Wide Web in 1989. He wrote the first web browser computer program in 1990 while employed at CERN in Switzerland.[2][3] The Web browser was released outside of CERN in 1991, first to other research institutions starting in January 1991 and to the general public on the Internet in August 1991.
-  </p>
+  <script>
+    /* When the user clicks on the button,
+        toggle between hiding and showing the dropdown content */
+    function myFunction() {
+      document.getElementById("myDropdown").classList.toggle("show");
+    }
+
+    // Close the dropdown if the user clicks outside of it
+    window.onclick = function (event) {
+      if (!event.target.matches('.dropbtn')) {
+
+        var dropdowns = document.getElementsByClassName("dropdown-content");
+        var i;
+        for (i = 0; i < dropdowns.length; i++) {
+          var openDropdown = dropdowns[i];
+          if (openDropdown.classList.contains('show')) {
+            openDropdown.classList.remove('show');
+          }
+        }
+      }
+    }
+
+    var apple = {
+      "color": "red",
+      "taste": "great",
+      "count": 10
+    };
+    //prompt("Object.keys(apple)");
+  </script>
+
 </body>
+
 </html>
