--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     .dropbtn :hover {
       background-color: #3e8e41;
     }
+
     /*
     .dropdown {
     position:            relative;
@@ -67,6 +68,7 @@
       display: block;
       background-color: red;
     }
+
     /*
     .dropbtn {
     margin-left:100px;
@@ -74,14 +76,17 @@
 */
   </style>
   <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-112254527-1"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-112254527-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
 
-  gtag('config', 'UA-112254527-1');
-</script>
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag('js', new Date());
+
+    gtag('config', 'UA-112254527-1');
+  </script>
 
 </head>
 
@@ -114,13 +119,13 @@
   </ol>
   <script>
     /* When the user clicks on the button,
-        toggle between hiding and showing the dropdown content */
+            toggle between hiding and showing the dropdown content */
     function myFunction() {
       document.getElementById("myDropdown").classList.toggle("show");
     }
 
     // Close the dropdown if the user clicks outside of it
-    window.onclick = function (event) {
+    window.onclick = function(event) {
       if (!event.target.matches('.dropbtn')) {
 
         var dropdowns = document.getElementsByClassName("dropdown-content");
@@ -141,7 +146,17 @@
     };
     //prompt("Object.keys(apple)");
   </script>
+<script>
+  window.onload = function () {
+    //변수 선언
+    var header = document.create#lement('h1');
+    var textNode = document.createTextNode('Hello DOM');
 
+    //노드 연결
+    header.appendChild(textNode);
+    document.body.appendChild(header);
+  }
+</script>
 </body>
 
 </html>
