--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 <script>
   window.onload = function () {
     //변수 선언
-    var header = document.create#lement('h1');
+    var header = document.createElement('h1');
     var textNode = document.createTextNode('Hello DOM');
 
     //노드 연결
